dfir_rs/tests/compile-fail-stable/surface_forwardref_chain_single.rs
../compile-fail/surface_forwardref_chain_single.rs